tried to fix bottom of screen problem on mobile - I have a feeling its fine

--- a/src/index.css
+++ b/src/index.css
@@ -1,14 +1,11 @@
 body {
-	min-height: 100%;
-	min-width: 100%;
-	padding: 0;
-	margin: 0;
+	min-height: 100vh;
 }
 
-html {
+/* html {
 	min-height: 100%;
 	margin: 0;
-}
+} */
 
 .arrow-icon {
 	text-align: center;
